# friday-sh

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: architecture.md  plan-v1.md  plan-v2.md  plan-v3.md
src/friday/agent/: context.py  contracts.py  core.py  deps.py  history.py  memory.py  modes.py  router.py  shared_memory.py  stats.py
src/friday/agent/prompts/: code.md  debug.md  reader.md  router.md  shell.md  writer.md
src/friday/cli/: app.py  ask.py  catalog.py  chat.py  completer.py  confirm.py  debug.py  output.py  picker.py  resources.py  theme.py
src/friday/domain/: models.py  permissions.py
src/friday/infra/: config.py  mcp.py  memory.py  sessions.py  store.py
src/friday/shell/: friday.plugin.zsh
src/friday/tools/: filesystem.py  memory.py  shell.py
tests/: test_ask.py  test_chat.py  test_cli.py  test_context.py  test_core.py  test_history.py  test_memory.py  test_output.py  test_resources.py  test_search_tool.py  test_security.py  test_shell_tool.py  test_stats.py  test_tools.py
